<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>1.2.5.RELEASE</version>
        <relativePath/>
    </parent>

    <groupId>com.destino</groupId>
    <artifactId>sharingan</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <packaging>war</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <commons-io.version>2.4</commons-io.version>
        <guava.version>18.0</guava.version>
        <gwt.version>2.6.1</gwt.version>
        <java.version>1.6</java.version>
        <springloaded.version>1.2.0.RELEASE</springloaded.version>
        <vaadin.version>7.4.5</vaadin.version>
        <vaadin.spring.addons.version>0.0.6.RELEASE</vaadin.spring.addons.version>
        <vaadin-spring-boot-starter.version>1.0.0.beta3</vaadin-spring-boot-starter.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.vaadin</groupId>
                <artifactId>vaadin-bom</artifactId>
                <version>${vaadin.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Vaadin -->
        <dependency>
            <groupId>com.vaadin</groupId>
            <artifactId>vaadin-client-compiled</artifactId>
        </dependency>
        <dependency>
            <groupId>com.vaadin</groupId>
            <artifactId>vaadin-themes</artifactId>
        </dependency>
        <dependency>
            <groupId>com.vaadin</groupId>
            <artifactId>vaadin-server</artifactId>
            <version>${vaadin.version}</version>
        </dependency>
        <dependency>
            <groupId>com.vaadin</groupId>
            <artifactId>vaadin-push</artifactId>
        </dependency>

        <!-- Spring4Vaadin -->
        <dependency>
            <groupId>org.vaadin.spring.addons</groupId>
            <artifactId>vaadin-spring-addon-i18n</artifactId>
            <version>${vaadin.spring.addons.version}</version>
        </dependency>

        <!-- Apache Commons -->
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${commons-io.version}</version>
        </dependency>

        <!-- Guava -->
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guava.version}</version>
        </dependency>

        <!--Lombok-->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.16.0</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.6.6</version>
        </dependency>

        <!--Test-->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
        </dependency>

    </dependencies>

    <repositories>
        <repository>
            <id>spring-snapshots</id>
            <url>http://repo.spring.io/libs-snapshot</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>vaadin-addons</id>
            <url>http://maven.vaadin.com/vaadin-addons</url>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

        </plugins>
    </build>

    <profiles>
        <profile>
            <id>websphere</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <dependencies>
                <!-- Spring Boot -->
                <dependency>
                    <groupId>com.vaadin</groupId>
                    <artifactId>vaadin-spring-boot-starter</artifactId>
                    <version>${vaadin-spring-boot-starter.version}</version>
                    <scope>provided</scope>
                </dependency>
                <dependency>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-web</artifactId>
                    <scope>provided</scope>
                </dependency>
                <dependency>
                    <groupId>com.vaadin</groupId>
                    <artifactId>vaadin-spring</artifactId>
                    <version>${vaadin-spring-boot-starter.version}</version>
                </dependency>
                <dependency>
                    <groupId>com.vaadin.external.atmosphere</groupId>
                    <artifactId>atmosphere-runtime</artifactId>
                    <version>2.2.4.vaadin7</version>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>spring-boot</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>

            <properties>
                <start-class>com.logviewer.Application</start-class>
                <tomcat.version>7.0.56</tomcat.version>
            </properties>

            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-antrun-plugin</artifactId>
                        <version>1.8</version>
                        <executions>
                            <execution>
                                <phase>prepare-package</phase>
                                <goals>
                                    <goal>run</goal>
                                </goals>
                                <configuration>
                                    <target>
                                        <delete file="${project.build.directory}/${project.build.finalName}/WEB-INF/web.xml"/>
                                        <delete file="${project.build.directory}/${project.build.finalName}/WEB-INF/applicationContext.xml"/>
                                    </target>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.springframework.boot</groupId>
                        <artifactId>spring-boot-maven-plugin</artifactId>
                        <dependencies>
                            <dependency>
                                <groupId>org.springframework</groupId>
                                <artifactId>springloaded</artifactId>
                                <version>${springloaded.version}</version>
                            </dependency>
                        </dependencies>
                        <configuration>
                            <jvmArguments>-XX:MaxPermSize=256m -Xms256m -Xmx512m -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005
                            </jvmArguments>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
            <dependencies>
                <!-- Vaadin4Spring -->
                <dependency>
                    <groupId>com.vaadin</groupId>
                    <artifactId>vaadin-spring-boot-starter</artifactId>
                    <version>${vaadin-spring-boot-starter.version}</version>
                </dependency>

                <dependency>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-tomcat</artifactId>
                    <scope>provided</scope>
                </dependency>

                <!-- Spring Boot -->
                <dependency>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-web</artifactId>
                </dependency>

            </dependencies>
        </profile>
    </profiles>

</project>
